deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: springcommunity/spring-petclinic-rest:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/mnt/data"
          name: spring-petclinic-storage
      volumes:
      - name: spring-petclinic-storage
        persistentVolumeClaim:
          claimName: spring-petclinic-pvc
